--- a/publications/index.html
+++ b/publications/index.html
@@ -62,7 +62,7 @@
     <main>
 		<h1>Publications</h1>
 		<article>
-	<p> Each part and specificity of ECOGEN has been validated and the results are published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN! Below are lists of journal articles, PhD theses and conferences describing, improving or using ECOGEN (sorted by date from the most recent). </p>
+	<p> Each part and specificity of ECOGEN has been validated and the results are published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN! Below are lists of journal articles, PhD theses and conferences <b>describing, improving or using ECOGEN</b> (sorted by date from the most recent). </p>
 </article>
 
 <article>
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2022). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, (accepted). <a class="badge" href="https://hal.archives-ouvertes.fr/hal-03894523v1" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Biasiori-Poulanges, L., Bokman, G. T., Baumann, E., Supponen, O. (2022). Dynamics of a shocked bubble-encapsulated droplet. <i>Applied Physics Letters</i>, 120 (26), 260601. <a class="badge" href="https://doi.org/10.1063/5.0102009" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0102009-green.svg" alt="DOI link" /></a>
@@ -106,6 +108,8 @@
 <article>
 	<h1> PhD Theses </h1>
 	<ol>
+		<li> Cazé, J. (2022). Modeling and simulation of the cavitation phenomenon in space engine turbopumps. <i>Aix-Marseille Université</i>.
+		</li>
 		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers</i>. <a href="https://www.theses.fr/2021ESMA0002" target="_blank">Download on www.theses.fr</a>
 		</li>
 		<li> Truumler, T. (2020). Numerical investigations of cavitation phenomena. <i>Technishe Universität München</i>. <a href="https://mediatum.ub.tum.de/doc/1543746/1543746.pdf" target="_blank">Download on mediatum.ub.tum.de</a>
