--- a/publications/index.html
+++ b/publications/index.html
@@ -76,7 +76,7 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
-		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2022). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, (accepted). <a class="badge" href="https://hal.archives-ouvertes.fr/hal-03894523v1" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
+		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2022). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, (accepted). <a class="badge" href="https://hal.archives-ouvertes.fr/hal-03894523v1" target="_blank"><img src="https://img.shields.io/badge/hal-03894523v1-red.svg" alt="DOI link" /></a>
 		</li>
 		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
 		</li>
