Update news, partners and publications

--- a/index.html
+++ b/index.html
@@ -79,10 +79,21 @@
 
 <article>
 	<h1> Modelling interactions of waves with diffused interfaces </h1>
+	<p class="date">2023-04-02, <a href="http://www.jsmf.gr.jp/icmf2022/" target="_blank">ICMF 2023</a>, Kobe, Japan</p>
+	<div>
+		<p> K. Schmidmayer is presenting investigations of shock-induced cavitation within a droplet which involves multiphase mechanisms. Within the context of heterogeneous nucleation, he introduces a thermodynamically well-posed multiphase numerical model accounting for phase compression and expansion, which relies on a finite pressure-relaxation rate formulation. He elucidates the critical Mach number from which cavitation is likely to occur and he provides a phenomenological description. </p>
+		<img src="/ECOGEN/assets/images/news/shock-induced_cavitation_comparison.png" alt="shock-induced-cavitation" />
+	</div>
+</article>
+
+<hr />
+
+<article>
+	<h1> Modelling interactions of waves with diffused interfaces </h1>
 	<p class="date">2022-08-22, <a href="https://www.math.uzh.ch/multimat2022/index.php?id=89" target="_blank">MultiMat 2022</a>, Zurich, Switzerland</p>
 	<div>
-		<p> K. Schmidmayer is presenting his work on interactions of waves-interfaces in the diffuse interface approach. He highlights the issue coming from the appearance of a wave-trapping phenomenon. Then he presents a thermodynamically-consistent pressure-disequilibrium model with finite pressure-relaxation rate to overcome the difficulties inherent in the computation of these interactions.	</p>
-		<img src="/ECOGEN/assets/images/news/MultiMat.png" alt="cavitation" />
+		<p> K. Schmidmayer is presenting interactions between waves and interfaces in the diffuse interface approach. He highlights the issue coming from the appearance of a wave-trapping phenomenon. Then he presents a thermodynamically-consistent pressure-disequilibrium model with finite pressure-relaxation rate to overcome the difficulties inherent in the computation of these interactions. </p>
+		<img src="/ECOGEN/assets/images/news/MultiMat.png" alt="wave-interface-interaction" />
 	</div>
 </article>
 
@@ -92,7 +103,7 @@
 	<h1> Modeling and simulation of a turbopump flow: a multiphase approach </h1>
 	<p class="date">2022-06-12, <a href="https://event.asme.org/Turbo-Expo" target="_blank">ASME Turbo Expo 2022</a>, Rotterdam, Netherlands</p>
 	<div class="flex">
-		<p>J. Cazé is presenting his work on cavitation in turbopumps. He explains how the modelling approach developped in ECOGEN in collaboration with CNES enables to catch the pressure drop observed when a cryogenic fluid is pumped in cavitation regime.</p>
+		<p> J. Cazé is presenting cavitation in turbopumps. He explains how the modelling approach developped in ECOGEN in collaboration with CNES enables to catch the pressure drop observed when a cryogenic fluid is pumped in cavitation regime. </p>
 		<img src="/ECOGEN/assets/images/news/yv_5ms.png" alt="cavitation" />
 	</div>
 </article>
@@ -115,42 +126,42 @@
 <hr />
 
 <article>
-<!-- 	<h1> Partners </h1>
-	<p> They support or have supported ECOGEN development. </p> -->
+	<p> Present and past partners: </p>
+	<div id="logos">
+		<div class="imgLogos">
+			<a href="https://www.univ-amu.fr/" target="_blank">  <img src="/ECOGEN/assets/images/amu.png" alt="Aix Marseille Universite" /> </a>
+		</div>
+		<div class="imgLogos">
+			<a href="https://www.inria.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/Inria.png" alt="Inria" /> </a>
+		</div>
+		<div class="imgLogos">
+			<a href="http://www.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/Caltech.png" alt="Caltech" /> </a>
+		</div>
+		<div class="imgLogos">
+			<a href="https://cnes.fr/" target="_blank">  <img src="/ECOGEN/assets/images/is_logo_2017_logo_triangulaire_bleu.png" alt="CNES" /> </a>
+		</div>
+		<div class="imgLogos">
+			<a href="http://iusti.cnrs.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/iusti.png" alt="IUSTI" /> </a>
+		</div>
+	</div>
+	<div id="logos">
+		<div class="imgLogos">
+		<a href="https://ethz.ch/en.html" target="_blank">  <img src="/ECOGEN/assets/images/ETH_Zurich.png" alt="ETH_Zurich" /> </a>
+		</div>
+		<div class="imgLogos2">
+		<a href="https://www.defense.gouv.fr/dga" target="_blank">  <img src="/ECOGEN/assets/images/DGA.png" alt="dga" /> </a>
+		</div>
+		<div class="imgLogos">
+		<a href="https://www.onr.navy.mil/" target="_blank">  <img src="/ECOGEN/assets/images/ONR.png" alt="Office of Naval Research" /> </a>
+		</div>
+		<div class="imgLogos2">
+			<a href="http://www.cnrs.fr/" target="_blank">  <img src="/ECOGEN/assets/images/CNRS.jpg" alt="CNRS" /> </a>
+		</div>
+		<div class="imgLogos2">
+		<a href="https://code-mphi.fr/" target="_blank">  <img src="/ECOGEN/assets/images/myfrogVert_OR.jpg" alt="code-mphi" /> </a>
+		</div>
+	</div>
 </article>
-<div id="logos">
-	<div class="imgLogos">
-		<a href="https://www.univ-amu.fr/" target="_blank">  <img src="/ECOGEN/assets/images/amu.png" alt="Aix Marseille Universite" /> </a>
-	</div>
-	<div class="imgLogos">
-		<a href="https://www.inria.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/Inria.png" alt="Inria" /> </a>
-	</div>
-	<div class="imgLogos">
-		<a href="http://www.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/Caltech.png" alt="Caltech" /> </a>
-	</div>
-	<div class="imgLogos">
-		<a href="https://cnes.fr/" target="_blank">  <img src="/ECOGEN/assets/images/is_logo_2017_logo_triangulaire_bleu.png" alt="CNES" /> </a>
-	</div>
-	<div class="imgLogos">
-		<a href="http://iusti.cnrs.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/iusti.png" alt="IUSTI" /> </a>
-	</div>
-	</div>
-<div id="logos">
-	<div class="imgLogos2">
-	<a href="https://www.defense.gouv.fr/dga" target="_blank">  <img src="/ECOGEN/assets/images/DGA.png" alt="dga" /> </a>
-	</div>
-	<div class="imgLogos">
-	<a href="https://www.onr.navy.mil/" target="_blank">  <img src="/ECOGEN/assets/images/ONR.png" alt="Office of Naval Research" /> </a>
-	</div>
-<!-- </div>
-<div id="logos"> -->
-	<div class="imgLogos2">
-		<a href="http://www.cnrs.fr/" target="_blank">  <img src="/ECOGEN/assets/images/CNRS.jpg" alt="CNRS" /> </a>
-	</div>
-	<div class="imgLogos2">
-	<a href="https://code-mphi.fr/" target="_blank">  <img src="/ECOGEN/assets/images/myfrogVert_OR.jpg" alt="code-mphi" /> </a>
-	</div>
-</div>
 <hr />
 
 
