--- a/publications/index.html
+++ b/publications/index.html
@@ -76,9 +76,9 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
-		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2022). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, (accepted). <a class="badge" href="https://hal.archives-ouvertes.fr/hal-03894523v1" target="_blank"><img src="https://img.shields.io/badge/hal-03894523v1-red.svg" alt="DOI link" /></a>
+		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2023). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, 35, 013312. <a class="badge" href="https://doi.org/10.1063/5.0127105" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0127105-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2023). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>, 95(2), 215-241. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Biasiori-Poulanges, L., Bokman, G. T., Baumann, E., Supponen, O. (2022). Dynamics of a shocked bubble-encapsulated droplet. <i>Applied Physics Letters</i>, 120 (26), 260601. <a class="badge" href="https://doi.org/10.1063/5.0102009" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0102009-green.svg" alt="DOI link" /></a>
 		</li>
@@ -96,11 +96,11 @@
 		</li>
 		<li> Schmidmayer, K., Bryngelson, S. H., Colonius, T. (2020). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics. <i>Journal of Computational Physics</i>, 402, 109080. <a class="badge" href="https://doi.org/10.1016/j.jcp.2019.109080" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.109080-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. <i>The Journal of the Acoustical Society of America</i>, 146, 516--531. <a class="badge" href="https://doi.org/10.1121/1.5116693" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1121/1.5116693-green.svg" alt="DOI link" /></a>
+		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. <i>The Journal of the Acoustical Society of America</i>, 146, 516-531. <a class="badge" href="https://doi.org/10.1121/1.5116693" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1121/1.5116693-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. <i>Journal of Computational Physics</i>, 388, 252--278. <a class="badge" href="https://dx.doi.org/10.1016/j.jcp.2019.03.011" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.03.011-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. <i>Journal of Computational Physics</i>, 388, 252-278. <a class="badge" href="https://dx.doi.org/10.1016/j.jcp.2019.03.011" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.03.011-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N., Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. <i>Journal of Computational Physics</i>, 334, 468--496. <a class="badge" href="https://doi.org/10.1016/j.jcp.2017.01.001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2017.01.001-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N., Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. <i>Journal of Computational Physics</i>, 334, 468-496. <a class="badge" href="https://doi.org/10.1016/j.jcp.2017.01.001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2017.01.001-green.svg" alt="DOI link" /></a>
 		</li>
 	</ol>
 </article>
