Correction of a news title

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <hr />
 
 <article>
-	<h1> Modelling interactions of waves with diffused interfaces </h1>
+	<h1> On bubble cloud growth in shock-droplet interaction </h1>
 	<p class="date">2023-04-02, <a href="http://www.jsmf.gr.jp/icmf2022/" target="_blank">ICMF 2023</a>, Kobe, Japan</p>
 	<div>
 		<p> K. Schmidmayer is presenting investigations of shock-induced cavitation within a droplet which involves multiphase mechanisms. Within the context of heterogeneous nucleation, he introduces a thermodynamically well-posed multiphase numerical model accounting for phase compression and expansion, which relies on a finite pressure-relaxation rate formulation. He elucidates the critical Mach number from which cavitation is likely to occur and he provides a phenomenological description. </p>
