--- a/publications/index.html
+++ b/publications/index.html
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+ 		<li> Sun, S., Zhao, M. (2023). Numerical simulation and analysis of the chain-reaction implosions of multi-spherical hollow ceramic pressure hulls in the deep-sea environment. <i>Ocean Engineering</i>, 277, 114247. <a class="badge" href="https://doi.org/10.1016/j.oceaneng.2023.114247" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.oceaneng.2023.114247-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2023). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, 35, 013312. <a class="badge" href="https://doi.org/10.1063/5.0127105" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0127105-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2023). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>, 95(2), 215-241. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
@@ -108,7 +110,9 @@
 <article>
 	<h1> PhD Theses </h1>
 	<ol>
-		<li> Cazé, J. (2022). Modeling and simulation of the cavitation phenomenon in space engine turbopumps. <i>Aix-Marseille Université</i>.
+		<li> Cazé, J. (2022). Modeling and simulation of the cavitation phenomenon in space engine turbopumps. <i>Aix-Marseille Université</i>. <a href="https://www.theses.fr/s230377" target="_blank">Download on www.theses.fr</a>
+		</li>
+		<li> Brasseur, M. (2022). Experimental study of the Richtmyer-Meshkov instability in spherical geometry. <i>Aix-Marseille Université</i>. <a href="https://www.theses.fr/s226927" target="_blank">Download on www.theses.fr</a>
 		</li>
 		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers</i>. <a href="https://www.theses.fr/2021ESMA0002" target="_blank">Download on www.theses.fr</a>
 		</li>
@@ -124,16 +128,17 @@
 <article>
 	<h1> Conferences </h1>
 	<ol>
-		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions of waves with diffused interfaces. <i>10th International Conference on Numerical Methods for Multi-Material Fluid Flow, MultiMat 2022</i>. </li>
-		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turbo Expo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. </li>
-		<li> Schmidmayer, K. (2022). Modeling and simulation of bubble dynamics in the diffuse-interface framework. <i>Workshop on cavitation, bubble dynamics and mass transfer, Strasbourg, France</i>. </li>
-		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
-		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019</i>. </li>
-		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics</i>. </li>
-		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
+		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). On bubble cloud growth in shock-droplet interaction. <i>11th International Conference on Multiphase Flow, ICMF 2023, Kobe</i>. </li>
+		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions of waves with diffused interfaces. <i>10th International Conference on Numerical Methods for Multi-Material Fluid Flow, MultiMat 2022, Zürich</i>. </li>
+		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turbo Expo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. <a class="badge" href="https://doi.org/10.1115/GT2022-78025" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1115/GT2022--78025-green.svg" alt="DOI link" /></a></li>
+		<li> Schmidmayer, K. (2022). Modeling and simulation of bubble dynamics in the diffuse-interface framework. <i>Workshop on cavitation, bubble dynamics and mass transfer, Strasbourg</i>. </li>
+		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics, Seattle</i>. </li>
+		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019, Rio de Janeiro</i>. </li>
+		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics, Atlanta</i>. </li>
+		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics, Salon-de-Provence</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
 		</li>
-		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018</i>. </li>
-		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference</i>. </li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018, Los Angeles</i>. </li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference, Washington</i>. </li>
 	</ol>
 </article>
 
