--- a/publications/index.html
+++ b/publications/index.html
@@ -76,11 +76,13 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+ 		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). Geometry effects on the droplet shock-induced cavitation. <i>Physics of Fluids</i>, 35 (6), 063315. <a class="badge" href="https://doi.org/10.1063/5.0151404" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0151404-green.svg" alt="DOI link" /></a>
+ 		</li>
  		<li> Sun, S., Zhao, M. (2023). Numerical simulation and analysis of the chain-reaction implosions of multi-spherical hollow ceramic pressure hulls in the deep-sea environment. <i>Ocean Engineering</i>, 277, 114247. <a class="badge" href="https://doi.org/10.1016/j.oceaneng.2023.114247" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.oceaneng.2023.114247-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2023). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, 35, 013312. <a class="badge" href="https://doi.org/10.1063/5.0127105" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0127105-green.svg" alt="DOI link" /></a>
+		<li> Biasiori-Poulanges, L., Schmidmayer, K. (2023). A phenomenological analysis of droplet shock-induced cavitation using a multiphase modelling approach. <i>Physics of Fluids</i>, 35 (1), 013312. <a class="badge" href="https://doi.org/10.1063/5.0127105" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0127105-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2023). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>, 95(2), 215-241. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
+		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2023). Modelling interactions between waves and diffused interfaces. <i>International Journal for Numerical Methods in Fluids</i>, 95 (2), 215-241. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142.2022-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Biasiori-Poulanges, L., Bokman, G. T., Baumann, E., Supponen, O. (2022). Dynamics of a shocked bubble-encapsulated droplet. <i>Applied Physics Letters</i>, 120 (26), 260601. <a class="badge" href="https://doi.org/10.1063/5.0102009" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0102009-green.svg" alt="DOI link" /></a>
 		</li>
@@ -100,6 +102,8 @@
 		</li>
 		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. <i>The Journal of the Acoustical Society of America</i>, 146, 516-531. <a class="badge" href="https://doi.org/10.1121/1.5116693" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1121/1.5116693-green.svg" alt="DOI link" /></a>
 		</li>
+		<li> Marty, A., Daniel, E., Massoni, J., Biamino, L., Houas, L., Leriche, D., Jourdan, G. (2019). Experimental and numerical investigations of shock wave propagation through a bifurcation. <i>Shock Waves</i>, 29, 285-296. <a class="badge" href="https://doi.org/10.1007/s00193-017-0797-6" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1007/s00193--017--0797--6-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. <i>Journal of Computational Physics</i>, 388, 252-278. <a class="badge" href="https://dx.doi.org/10.1016/j.jcp.2019.03.011" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2019.03.011-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N., Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. <i>Journal of Computational Physics</i>, 334, 468-496. <a class="badge" href="https://doi.org/10.1016/j.jcp.2017.01.001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2017.01.001-green.svg" alt="DOI link" /></a>
@@ -116,11 +120,13 @@
 		</li>
 		<li> Biasiori-Poulanges, L. (2021). Shock-induced aerodynamic fragmentation of a liquid droplet. <i>Université de Poitiers</i>. <a href="https://www.theses.fr/2021ESMA0002" target="_blank">Download on www.theses.fr</a>
 		</li>
-		<li> Truumler, T. (2020). Numerical investigations of cavitation phenomena. <i>Technishe Universität München</i>. <a href="https://mediatum.ub.tum.de/doc/1543746/1543746.pdf" target="_blank">Download on mediatum.ub.tum.de</a>
+		<li> Trummler, T. (2020). Numerical investigations of cavitation phenomena. <i>Technishe Universität München</i>. <a href="https://mediatum.ub.tum.de/doc/1543746/1543746.pdf" target="_blank">Download on mediatum.ub.tum.de</a>
 		</li>
 		<li> Veilleux, J.-C. (2019). Pressure and Stress Transients in Autoinjector Devices. <i>California Institute of Technology</i>. <a class="badge" href="http://dx.doi.org/10.7907/VJSH-TF65" target="_blank"><img src="https://img.shields.io/badge/DOI-10.7907/VJSH--TF65-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="http://www.theses.fr/2017AIXM0339" target="_blank">Download on www.theses.fr</a>
+		<li> Marty, A. (2018). Propagation d'une onde de choc dans un système de canaux à géométrie complexe : expériences et simulations. <i>Aix-Marseille Université</i>. <a href="https://www.theses.fr/2018AIXM0678" target="_blank">Information on www.theses.fr</a>
+		</li>
+		<li> Schmidmayer, K. (2017). Simulation de l'atomisation d'une goutte par un écoulement à grande vitesse. <i>Aix-Marseille Université</i>. <a href="https://www.theses.fr/2017AIXM0339" target="_blank">Download on www.theses.fr</a>
 		</li>
 	</ol>
 </article>
@@ -134,6 +140,7 @@
 		<li> Schmidmayer, K. (2022). Modeling and simulation of bubble dynamics in the diffuse-interface framework. <i>Workshop on cavitation, bubble dynamics and mass transfer, Strasbourg</i>. </li>
 		<li> Dorschner, B., Schmidmayer, K., Biasiori-Poulanges, L., El-Rabii, H., Colonius, T. (2019). Shock-induced atomization of water droplets. <i>72nd Annual Meeting of the APS Division of Fluid Dynamics, Seattle</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019, Rio de Janeiro</i>. </li>
+		<li> Marty, A., Jourdan, G., Houas, L., Mariani, C. C., Daniel, E., Biamino, L., Leriche, D. (2019). Shock wave mitigation propagating through a cavity. <i>32nd International Symposium on Shock Waves, ISSW32, Singapore</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics, Atlanta</i>. </li>
 		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics, Salon-de-Provence</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
 		</li>
