Update publications + Add gitignore

--- a/publications/index.html
+++ b/publications/index.html
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> Cazé, J., Petitpas, F., Daniel, E., Queguineur, M., Le Martelot, S. (2023). Modeling and simulation of the cavitation phenomenon in space-engine turbopumps. <i>Submitted</i>. <a class="badge" href="http://dx.doi.org/10.2139/ssrn.4479910" target="_blank"><img src="https://img.shields.io/badge/DOI-10.2139/ssrn.4479910-green.svg" alt="DOI link" /></a>
+ 		</li>
  		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). Geometry effects on the droplet shock-induced cavitation. <i>Physics of Fluids</i>, 35 (6), 063315. <a class="badge" href="https://doi.org/10.1063/5.0151404" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0151404-green.svg" alt="DOI link" /></a>
  		</li>
  		<li> Sun, S., Zhao, M. (2023). Numerical simulation and analysis of the chain-reaction implosions of multi-spherical hollow ceramic pressure hulls in the deep-sea environment. <i>Ocean Engineering</i>, 277, 114247. <a class="badge" href="https://doi.org/10.1016/j.oceaneng.2023.114247" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.oceaneng.2023.114247-green.svg" alt="DOI link" /></a>
