--- a/releases/index.html
+++ b/releases/index.html
@@ -64,12 +64,55 @@
 		<hr />
 
 <article>
+	<h1> ECOGEN_v4.0 </h1>
+	<p class="date">2023-09-18</p>
+	<img src="/ECOGEN/assets/images/image_v4_0.png" alt="Cavitation in turbopump." />
+	<p> A new release, <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v4.0" target="_blank">ECOGEN_v4.0</a>, is available on GitHub. It includes new features and fixes bugs.
+	<h2> Major points: </h2>
+		<ul>
+			<li> Removed the version numbers of the input file names (break compatibility with previous version). </li>
+			<li> Possibility to use finite pressure relaxation on UEq model for more than two phases. More information in: Schmidmayer et al. <a class="badge" href="https://doi.org/10.1002/fld.5142" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1002/fld.5142-green.svg" alt="DOI link" /></a> </li>
+			<li> Possibility to initialize an unstructured simulation with the result of a previous simulation performed on a similar mesh and/or a different number of CPUs. This feature is particularly useful to fasten steady state convergence on a fine mesh using coarse mesh results. More information in: Cazé et al. (2023). Modelling and simulation of the cavitation phenomenon in space-engine turbopumps. <a class="badge" href="http://dx.doi.org/10.2139/ssrn.4479910" target="_blank"><img src="https://img.shields.io/badge/DOI-10.2139/ssrn.4479910-green.svg" alt="DOI link" /></a> </li>
+			<li> PUEq phase-change model (handled through PTMu relaxation) does not require mass fraction threshold anymore to trigger mass transfer. Also more information in: Cazé et al. (2023). <a class="badge" href="http://dx.doi.org/10.2139/ssrn.4479910" target="_blank"><img src="https://img.shields.io/badge/DOI-10.2139/ssrn.4479910-green.svg" alt="DOI link" /></a> </li>
+			<li> Add Moving Reference Frame coupling of a rotating region with a static one. Also more information in: Cazé et al. (2023). <a class="badge" href="http://dx.doi.org/10.2139/ssrn.4479910" target="_blank"><img src="https://img.shields.io/badge/DOI-10.2139/ssrn.4479910-green.svg" alt="DOI link" /></a> </li>
+			<li> Renamed boundary condition names (break compatibility with previous version). </li>
+			<li> Immersed boundaries can be added in a Cartesian mesh domain (physicalEntity = -1). Similarly to: Trummler et al. <a class="badge" href="https://doi.org/10.1017/jfm.2020.432" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2020.432-green.svg" alt="DOI link" /></a> </li>
+		</ul>
+	<h2> Minor points: </h2>
+		<ul>
+			<li> Option to record boundary quantities such as pressure forces and shear stress (useful for aerodynamic coefficient computation). </li>
+			<li> Possibility to display cells' reference length on XML output with unstructured mesh. </li>
+			<li> Add a tutorial on mesh mapping and low-Mach preconditionning options. </li>
+			<li> Add scripts related to droplet shock-induced cavitation. More information in: Biasiori-Poulanges &amp; Schmidmayer (2023) and Schmidmayer &amp; Biasiori-Poulanges (2023). <a class="badge" href="https://doi.org/10.1063/5.0127105" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0127105-green.svg" alt="DOI link" /></a> <a class="badge" href="https://doi.org/10.1063/5.0151404" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0151404-green.svg" alt="DOI link" /></a> </li>
+			<li> Improve variable name style for Gnuplot output. </li>
+			<li> Increase code coverage by nonreg. </li>
+			<li> Updated AMR refinement criteria to match the different modelling. </li>
+			<li> Always a little more source code translation from French to English. </li>
+			<li> A wall is now considered as a symmetry BC if viscosity is ignored. </li>
+			<li> Update of documentation. </li>
+		</ul>
+	<h2> Fixes: </h2>
+		<ul>
+			<li> Fix the getTemperature() and copyPhase() methods for multiphase models. </li>
+			<li> Fix restart bug when using alphaNull on PUEq model. </li>
+			<li> Fix bug on simulation progress when using iteration control mode. </li>
+			<li> Fix a MPI data type that caused a crash during MPI_Allreduce on some compilers. </li>
+			<li> Minor fix for Euler-Korteweg model. </li>
+			<li> Correction on UEq BC for volume fraction flux, using sM instead of uStar to respect transport equation. </li>
+			<li> Update non-regression scripts to make them compatible with OS X. </li>
+			<li> Correction for phase change with a second-order method. </li>
+		</ul>
+	</p>
+</article>
+<hr />
+
+<article>
 	<h1> ECOGEN_v3.1 </h1>
 	<p class="date">2022-01-27</p>
 	<img src="/ECOGEN/assets/images/smoothInterface.png" alt="Shock interacting with a smooth interface." />
-	<p> A new release, <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v3.1" target="_blank">ECOGEN_v3.1</a>, is available on GitHub. It includes new features and fixes bugs.
+	<p> <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v3.1" target="_blank">ECOGEN_v3.1</a> is available on GitHub. It includes new features and fixes bugs.
 	<h2> Major points: </h2>
-		<ul>	
+		<ul>
 			<li> Add velocity-equilibrium model. Read the following paper for more information: K. Schmidmayer, J. Cazé, F. Petitpas, E. Daniel, N. Favrie. "Modelling interactions between waves and diffused interfaces". 2021. </li>
 			<li> Add velocity-equilibrium model based on total-energy equations. Read the previous paper for more information. </li>
 			<li> Possibility to use another gradient method (Green-Gauss) which is compatible with unstructured meshes. Previously, finite differences were the only available. </li>
@@ -104,7 +147,7 @@
 <article>
 	<h1> ECOGEN_v3.0 </h1>
 	<p class="date">2021-03-10</p>
-	<p> A new release, <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v3.0" target="_blank">ECOGEN_v3.0</a>, is available on GitHub. It includes new features and fixes bugs:
+	<p> <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v3.0" target="_blank">ECOGEN_v3.0</a> is available on GitHub. It includes new features and fixes bugs:
 		<ul>		
 			<li> General restructuration and cleaning. </li>
 			<li> Correction of several bugs (viscous terms, etc.). </li>
@@ -119,7 +162,7 @@
 	<h1> ECOGEN_v2.0 </h1>
 	<p class="date">2020-05-11</p>
 	<img src="/ECOGEN/assets/images/BubbleHelium.gif" alt="Load balancing on a bubble-shock interaction." />
-	<p> A new release, <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v2.0" target="_blank">ECOGEN_v2.0</a>, is available on GitHub. It includes new features and fixes bugs:
+	<p> <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v2.0" target="_blank">ECOGEN_v2.0</a> is available on GitHub. It includes new features and fixes bugs:
 		<ul>		
 			<li> AMR multicore computations are now efficiently load balanced. </li>
 			<li> New equation of state implemented: Noble-Abel Stiffened-Gas EOS.</li>
