--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
 <hr />
 
 <article>
+	<h1> ECOGEN_v4.0 </h1>
+	<p class="date">2023-09-18</p>
+	<div>
+		<p> A new release, <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v4.0" target="_blank">ECOGEN_v4.0</a>, is available on GitHub. More information <a href="/ECOGEN/releases/">here</a>. </p>
+		<img src="/ECOGEN/assets/images/image_v4_0.png" alt="Cavitation in turbopump." />
+	</div>
+</article>
+
+<hr />
+
+<article>
 	<h1> On bubble cloud growth in shock-droplet interaction </h1>
 	<p class="date">2023-04-02, <a href="http://www.jsmf.gr.jp/icmf2022/" target="_blank">ICMF 2023</a>, Kobe, Japan</p>
 	<div>
@@ -109,24 +120,11 @@
 </article>
 
 <h2>
-		Last release
-</h2>
-
-<hr />
-
-<article>
-	<h1> ECOGEN_v3.1 </h1>
-	<p class="date">2022-01-27</p>
-	<p> A new release, <a href="https://github.com/code-mphi/ECOGEN/releases/tag/v3.1" target="_blank">ECOGEN_v3.1</a>, is available on GitHub. More information <a href="/ECOGEN/releases/">here</a>. </p>
-</article>
-
-<h2>
 		Partners
 </h2>
 <hr />
 
 <article>
-	<p> Present and past partners: </p>
 	<div id="logos">
 		<div class="imgLogos">
 			<a href="https://www.univ-amu.fr/" target="_blank">  <img src="/ECOGEN/assets/images/amu.png" alt="Aix Marseille Universite" /> </a>
@@ -145,6 +143,9 @@
 		</div>
 	</div>
 	<div id="logos">
+		<div class="imgLogos">
+			<a href="https://www-dam.cea.fr/gramat/" target="_blank">  <img src="/ECOGEN/assets/images/CEA_Gramat.jpg" alt="CEA Gramat" /> </a>
+		</div>
 		<div class="imgLogos">
 		<a href="https://ethz.ch/en.html" target="_blank">  <img src="/ECOGEN/assets/images/ETH_Zurich.png" alt="ETH_Zurich" /> </a>
 		</div>
