--- a/publications/index.html
+++ b/publications/index.html
@@ -138,6 +138,8 @@
 <article>
 	<h1> Conferences </h1>
 	<ol>
+		<li> Zheng, J., He, Y., Zhao, M. (2023). Numerical study of underwater implosion of spherical pressure hull on deep-sea submersibles. <i>ASME 2023 42nd International Conference on Ocean, Offshore and Arctic Engineering, Melbourne</i>. </li>
+		<li> Shengxia, S., Zhao, M. (2023). Numerical simulation of chain-reaction implosions and analysis of different implosion beginning positions. <i>ASME 2023 42nd International Conference on Ocean, Offshore and Arctic Engineering, Melbourne</i>. </li>
 		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). On bubble cloud growth in shock-droplet interaction. <i>11th International Conference on Multiphase Flow, ICMF 2023, Kobe</i>. </li>
 		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions of waves with diffused interfaces. <i>10th International Conference on Numerical Methods for Multi-Material Fluid Flow, MultiMat 2022, Zürich</i>. </li>
 		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turbo Expo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. <a class="badge" href="https://doi.org/10.1115/GT2022-78025" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1115/GT2022--78025-green.svg" alt="DOI link" /></a></li>
