--- a/publications/index.html
+++ b/publications/index.html
@@ -76,10 +76,10 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> Cazé, J., Petitpas, F., Daniel, E., Queguineur, M., Le Martelot, S. (2024). Modeling and simulation of the cavitation phenomenon in space-engine turbopumps. <i>Journal of Computational Physics</i>, 112817. <a class="badge" href="https://doi.org/10.1016/j.jcp.2024.112817" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2024.112817-green.svg" alt="DOI link" /></a>
+ 		</li>
 		<li> Sun, S., Zhao, M., Jiang, Y. (2024). Numerical study of chain-reaction implosions in a spatial array of ceramic pressure hulls in the deep sea using a compressible multiphase flow model. <i>Physics of Fluids</i>, 36, 016112. <a class="badge" href="https://doi.org/10.1063/5.0184654" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0184654-green.svg" alt="DOI link" /></a>
 		</li>
-		<li> Cazé, J., Petitpas, F., Daniel, E., Queguineur, M., Le Martelot, S. (2023). Modeling and simulation of the cavitation phenomenon in space-engine turbopumps. <i>In revision</i>. <a class="badge" href="http://dx.doi.org/10.2139/ssrn.4479910" target="_blank"><img src="https://img.shields.io/badge/DOI-10.2139/ssrn.4479910-green.svg" alt="DOI link" /></a>
- 		</li>
  		<li> Bokman, G. T., Biasiori-Poulanges, L., Meyer, D. W., Supponen, O. (2023). Scaling laws for bubble collapse driven by an impulsive shock wave. <i>Journal of Fluid Mechanics</i>, 967, A33. <a class="badge" href="https://doi.org/10.1017/jfm.2023.514" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2023.514-green.svg" alt="DOI link" /></a>
  		</li>
  		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). Geometry effects on the droplet shock-induced cavitation. <i>Physics of Fluids</i>, 35 (6), 063315. <a class="badge" href="https://doi.org/10.1063/5.0151404" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0151404-green.svg" alt="DOI link" /></a>
